--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
+    "jstransformer-markdown-it": "^2.1.0",
     "mongodb": "^3.0.8",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
