--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.3",
     "jstransformer-markdown-it": "^2.1.0",
+    "markdown-it": "^8.4.1",
     "mongodb": "^3.0.8",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
