--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "express": "^4.16.3",
     "jstransformer-markdown-it": "^2.1.0",
+    "katex": "^0.10.0-beta",
     "markdown-it": "^8.4.1",
+    "markdown-it-texmath": "^0.4.7",
     "mongodb": "^3.0.8",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
