--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "async": "^2.6.1",
     "body-parser": "~1.18.2",
-    "client-oauth2": "^4.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.3",
@@ -18,7 +17,10 @@
     "markdown-it-texmath": "^0.4.7",
     "mongodb": "^3.0.8",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-github2": "^0.1.11",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
-  }
+  },
+  "devDependencies": {}
 }
