--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "markdown-it": "^8.4.1",
     "markdown-it-texmath": "^0.4.7",
     "mongodb": "^3.0.8",
+    "mongoose": "^5.2.1",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
