--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jstransformer-markdown-it": "^2.1.0",
     "katex": "^0.10.0-beta",
     "markdown-it": "^8.4.1",
